1 提交完善后的代码

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,12 @@
     <com.wujie.waveview.view.WaveView
         android:id="@+id/wave_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
         android:background="#ffffff"
-        wave:above_wave_color="#0074F1"
-        wave:blow_wave_color=" #0074F1"
+        wave:above_wave_color="#33006FF1"
+        wave:blow_wave_color="#4d006FF1"
+        wave:middle_wave_color="#66006FF1"
+        wave:bottom_wave_color="#7e006FF1"
         wave:progress="80"
         wave:wave_height="middle"
         wave:wave_hz="slow"
