--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -4,6 +4,8 @@
 	<declare-styleable name="WaveView">
 		<attr name="above_wave_color" format="color"/>
 		<attr name="blow_wave_color" format="color"/>
+        <attr name="middle_wave_color" format="color"/>
+        <attr name="bottom_wave_color" format="color"/>
 		<attr name="progress" format="integer"/>
         <attr name="wave_length" format="enum">
             <enum name="large" value="1"/>
