--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
 
     <com.wujie.waveview.view.WhewView
         android:id="@+id/whewView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
         android:layout_below="@+id/seek_bar"
         android:layout_marginTop="65dp"
         android:layout_toEndOf="@+id/wave_view"
@@ -45,7 +45,8 @@
         android:layout_below="@+id/seek_bar"
         android:layout_marginTop="65dp"
         android:layout_toEndOf="@+id/wave_view"
-        android:layout_toRightOf="@+id/wave_view">
+        android:layout_toRightOf="@+id/wave_view"
+        android:visibility="gone">
 
 
         <ImageView
